--- a/FoodPlanner/FoodPlanner/FoodPlanner.csproj
+++ b/FoodPlanner/FoodPlanner/FoodPlanner.csproj
@@ -144,6 +144,7 @@
     <Compile Include="UserControls\SlidePanel.xaml.cs">
       <DependentUpon>SlidePanel.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ValueConverters\ValueConverter.cs" />
     <Compile Include="ViewModels\RecipeViewModel.cs" />
     <Compile Include="Models\SearchResults.cs" />
     <Compile Include="Recipe.cs">
