--- a/FoodPlanner/FoodPlanner/FoodPlanner.csproj
+++ b/FoodPlanner/FoodPlanner/FoodPlanner.csproj
@@ -122,6 +122,7 @@
     <Compile Include="Meal.cs">
       <DependentUpon>FoodDatabase.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\ShoppingClass.cs" />
     <Compile Include="Models\Graylist.cs" />
     <Compile Include="Models\Ingredient.cs" />
     <Compile Include="Models\InventoryIngredient.cs" />
