--- a/FoodPlanner/FoodPlanner/App.config
+++ b/FoodPlanner/FoodPlanner/App.config
@@ -11,7 +11,8 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
   <connectionStrings>
-    <add name="FoodContext" connectionString="metadata=res://*/FoodDatabase.csdl|res://*/FoodDatabase.ssdl|res://*/FoodDatabase.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=solaronline.me;user id=foodplan;database=foodplan;password=zFFNzDVQntdapQ6L;persistsecurityinfo=True&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    <add name="FoodContext" connectionString="metadata=res://*/FoodDatabase.csdl|res://*/FoodDatabase.ssdl|res://*/FoodDatabase.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=127.0.0.1;user id=root;database=foodplan;password=qw12qw12;persistsecurityinfo=True&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
